--- a/README
+++ b/README
@@ -2,11 +2,11 @@
 Manifest
 --------
 
-BrowserPlugins - share story with site plugins
+BrowserPlugins - share a story with the MEyeNews website. Plugins for each browser supported will be placed in this directory
 Database - create database scripts and such
 Documentation - documentation for the site and APIs
 Mobile - mobile apps
 Search - search related code
 Server - server deploy scripts and cron scripts and such
-Website - files to be deployed for the web site
+Website - files to be deployed for the web site. note the scripts in the Server directory deploy these files.
 
